[package]
name = "qopter-rs"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]

[lib]
name = "qopter"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "qoptimize"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
ordered-float = "0.5"
permutohedron = "0.2"
rand = "0.6.0"
rand_chacha = "0.1"
failure = "0.1"
rayon = "1.0"
clap = "2.3"
openqasm-rs = { path = "openqasm-rs" }
bit-vec = "0.5"
log = "0.4"
env_logger = "0.5"
num-complex = "0.2"
fnv = "1.0"
lazy_static = "1.0"
order-stat = "0.1"
ndarray = "0.12"

[dependencies.pyo3]
version = "0.5.0"
features = ["python3"]
